cabal-version:      3.8
name:               advent-of-code
version:            0.1.0.0
description:
  Please see the README on GitHub at <https://github.com/Rypac/advent-of-code-2023#readme>

homepage:           https://github.com/lsmor/template-advent-of-code#readme
bug-reports:        https://github.com/lsmor/template-advent-of-code/issues
author:             Ryan Davis
copyright:          2023 Ryan Davis
license:            BSD-3-Clause
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/lsmor/template-advent-of-code

common deps
  default-extensions:
    NoFieldSelectors
    DerivingStrategies
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings

  build-depends:
    , attoparsec
    , base               >=4.7 && <5
    , bytestring
    , containers
    , matrix
    , mtl
    , pointedlist
    , search-algorithms
    , split
    , text
    , time
    , vector

  other-modules:      Paths_advent_of_code
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-deriving-strategies
    -Wmissing-export-lists -Wpartial-fields
    -Wprepositive-qualified-module -Wredundant-constraints
    -Wunused-packages -Wno-unused-top-binds

  default-language:   GHC2021

-- Do not touch after this line. aoc-hs will edit it
executable day-1
  import:         deps
  hs-source-dirs: solutions
  main-is:        day-1.hs

executable day-2
  import:         deps
  hs-source-dirs: solutions
  main-is:        day-2.hs

executable day-3
  import:         deps
  hs-source-dirs: solutions
  main-is:        day-3.hs
